# ErgoType

./:  LICENSE.md  .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  README.md  USB_DEBUG_SUMMARY.md  freertos_hook.c  hid.c  jconfig.c  jconfig.h  keyscan.c  led.c  led.h  log.c  log.h  main.c  matrix.c  matrix.h  pointer.c  stdio_tusb_cdc.c  stdio_tusb_cdc.h  test.c  tud.c  tusb_device_task.c  uart_stdio.c  usb_msc_driver.c
.github/workflows/: cmake-single-platform.yml
Pico-PIO-USB/src/: pio_usb_ll.h
boards/: pico_16mb.h  waveshare_rp2350b_plus_w.h  weact_studio_rp2350a_core_v10_16mb.h  weact_studio_rp2350a_core_v10_4mb.h  yd_rp2040_16mb.h  yd_rp2040_4mb.h  yd_rp2040_8mb.h
display/: px4x8_font.h  px6x8_font.h  ssd1306.c  ssd1306.h
docs/: README.md  board-porting.md  config-json.md  debugging.md  examples.md  hid-remapper.md  index.html  keyd-overlays.md  keyd.md  keymap.md  layouts.md  logging.md  modes.md  pointing.md  quickstart.md  runtime.md  usb-host.md  waveshare-rp2040-pizero.md
docs/webhid/: README.md  ergotype-kle.json  hardware-selector-issue.md  index.html
keyd/: CMakeLists.txt
keyd/port/: config.c  config.h  daemon.c  daemon.h  device.c  device.h  evloop.c  hooks.c  keyboard.c  keyboard.h  keyd.h  macro.c  task.c  vkbd.c
keyd/port/vkbd/: tusb_hid.c  vkbd.c  vkbd_event.h
keyd/src/: CMakeLists.txt  config.c  config.h  daemon.c  daemon.h  ini.c  ini.h  keyboard.c  keyboard.h  keys.c  log.c  log.h  macro.c  porting.c  porting.h  string.c  string.h  stringutils.c  stringutils.h  unicode.c  vkbd.c  vkbd_tusb_backend.c
led/: led.c  led.h  plain.c  plain.h  ws2812.c  ws2812.h  ws2812.pio
licenses/:  LICENSE-ErgoType.txt  LICENSE-MIT-X.txt
pico-usb-flash-drive/: CMakeLists.txt  fatfs_driver.c  flash.c  flash.h
pmw3360/: CMakeLists.txt  pmw3360.c
pointing/: README.md  pointer.c  pointer.h
pointing/pmw3360/: CMakeLists.txt  pmw3360.c  pmw3360.h
pointing/pmw3389/: CMakeLists.txt  pmw3389.c  pmw3389.h  srom.c  srom.h
rtos/: FreeRTOSConfig.h  README.md  freertos_hook.c
tusb/: CMakeLists.txt  tusb_config.h  usb_cdc_callbacks.c  usb_descriptors.c  usb_descriptors.h  usb_device_callbacks.c  usb_hid_callbacks.c  usb_msc_callbacks.c  usb_webhid.c  usb_webhid.h
ui/: ui.c  ui.h
usb_host/: forward.c  forward.h  hid.h  hid_callbacks.c  hid_keyd.c  hid_keyd.h  hid_parser.c  hid_parser.h  hid_report.c  task.c
